--- a/form/form-iframes.html
+++ b/form/form-iframes.html
@@ -25,6 +25,8 @@
 </div>
 <div>
   <button>Submit 1</button>
+  <button>Submit 1A</button>
+  <button>Submit 1B</button>
 </div>
 <div>
   <label>Label 4</label>
